@@ -1,0 +1,51 @@
+<?xml version="1.0"?>
+<wsdl:definitions xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+xmlns:soap="http://schemas.xmlsoap.org/wsdl/soap/"
+xmlns:soapenc="http://schemas.xmlsoap.org/soap/encoding/"
+xmlns:wsdl="http://schemas.xmlsoap.org/wsdl/"
+xmlns:api="http://soap.dev/soap/PublisherService"
+xmlns:types="http://soap.dev/soap/types"
+targetNamespace="http://soap.dev/soap/PublisherService">
+  <wsdl:types>
+    <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+xmlns:soapenc="http://schemas.xmlsoap.org/soap/encoding/"
+xmlns:wsdl="http://schemas.xmlsoap.org/wsdl/"
+xmlns:types="http://soap.dev/soap/types"
+targetNamespace="http://soap.dev/soap/types">
+      <xsd:complexType name="publisher">
+        <xsd:all>
+          <xsd:element name="region_id" type="xsd:long" default="52"/>
+        </xsd:all>
+      </xsd:complexType>
+    </xsd:schema> 
+  </wsdl:types>
+  <wsdl:message name="addInput">
+    <wsdl:part name="publisher" type="types:publisher"/>
+  </wsdl:message>
+  <wsdl:message name="addOutput">
+    <wsdl:part name="out" type="xsd:string"/>
+  </wsdl:message>
+  <wsdl:portType name="PublisherServicePortType">
+    <wsdl:operation name="add">
+      <wsdl:input message="api:addInput"/>
+      <wsdl:output message="api:addOutput"/>
+    </wsdl:operation>
+  </wsdl:portType>
+  <wsdl:binding name="PublisherServiceBinding" type="api:PublisherServicePortType">
+    <soap:binding style="rpc" transport="http://schemas.xmlsoap.org/soap/http"/>
+    <wsdl:operation name="add">
+      <soap:operation soapAction="urn:PublisherService#add" style="rpc"/>
+      <wsdl:input>
+        <soap:body use="encoded" namespace="urn:PublisherService" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"/>
+      </wsdl:input>
+      <wsdl:output>
+        <soap:body use="encoded" namespace="urn:PublisherService" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"/>
+      </wsdl:output>
+    </wsdl:operation>
+  </wsdl:binding>
+  <wsdl:service name="PublisherService">
+    <wsdl:port name="PublisherServicePort" binding="api:PublisherServiceBinding">
+      <soap:address location="http://soap.dev/soap//publisher_test.php"/>
+    </wsdl:port>
+  </wsdl:service>
+</wsdl:definitions>
